<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">Linpack</string>
	<string name="running_benchmark">Running linpack...</string>
	<string name="start_single">Run Linpack</string>
	<string name="mflops">Mflops</string>
	<string name="nres">Norm Res</string>
	<string name="time">Time</string>
	<string name="precision">Precision</string>
	<string name="close">Close</string>
	<string name="previous_runs">Previous Results</string>
	<color name="apps_primary">#ffb2cb39</color>
		
</resources>
