<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".Tester" >

    <LinearLayout
        android:id="@+id/b_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        android:background="@drawable/card_background_white"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/mf_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mflops"
                android:textColor="#000"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/mflops"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="#000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nr_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nres"
                android:textColor="#000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/nres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="#000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/timr_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time"
                android:textColor="#000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="#000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/precision_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/precision"
                android:textColor="#000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/precision"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="#000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                style="@android:style/Widget.Button.Small"
                android:id="@+id/start_single"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/button"
                android:padding="5dp"
                android:text="@string/start_single"
                android:textColor="#000" />

        </LinearLayout>

    </LinearLayout>
    

    <TextView
        android:id="@+id/results"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b_layout"
        android:text="@string/previous_runs" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ad_layout"
        android:layout_below="@+id/results" >

    </ListView>

</RelativeLayout>